--- a/src/main/webapp/HomePage.html
+++ b/src/main/webapp/HomePage.html
@@ -26,10 +26,10 @@
         <h1 class="text-center">Welcome to Hilly Railways</h1>
         <div class="row justify-content-center mt-4">
             <div class="col-12 text-center mb-2">
-                <a href="UserSignUp.html" class="btn-primary">Sign Up</a>
+                <a href="UserSignUpServlet" class="btn-primary">Sign Up</a>
             </div>
             <div class="col-12 text-center mb-2">
-                <a href="UserLogin.html" class="btn-primary">Sign in</a>
+                <a href="UserLoginServlet" class="btn-primary">Sign in</a>
             </div>
         </div>
     </div>
