--- a/src/main/webapp/UserTicketBooking.html
+++ b/src/main/webapp/UserTicketBooking.html
@@ -6,7 +6,50 @@
     <style>
         body {
             background-image: url('images/loginHill.jpg');
+            background-color: #f0f0f0;
+            font-size:16px;
+            margin:0;
+            padding:20px;
+            min-height:100vh;
+            display:flex;
+            align-items:center;
+            justify-content:center;
         }
+        h2{
+           font-family:'Arial';x
+           font-size:50px;
+           font-weight:bold;
+           margin:20 px 0;
+        }
+        .form-container{
+            background-color:#f2f2f2;
+            padding:20px;
+            border-radius:5px;
+            margin:auto;
+        }
+        label{
+            display:block;
+            margin-bottom:8px;
+            font-weight:bold;
+        }
+        input{
+           width:100%;
+           padding:8px;
+           margin-bottom:10px;
+           border:1px solid #ccc;
+           border-radius:4px;
+        }
+        button{
+          background-color:green;
+          border:none;
+          color:white;
+          padding:15 px 32 px;
+          text-align:center;
+          font-size:16px;
+          text-decoration:none;
+          border-radius:4px;
+        }
+        
     </style>
 </head>
 <body>
