--- a/src/main/webapp/UpdateTicket.html
+++ b/src/main/webapp/UpdateTicket.html
@@ -3,7 +3,50 @@
 <head>
 <meta charset="UTF-8">
 <title>Update Ticket</title>
+   <link rel='stylesheet' type='text/css' href='css/bootstrap.min.css'>
+     <style>
+        body{
+          background-image:url("images/loginHill.jpg");
+	      background-color:#f0f0f0;
+	      font-size:16px;
+	      margin:0;
+	      padding:20px;
+	      min-height:100vh;
+	      display:flex;
+	      align-items:center;
+	      justify-content:center;
+        }
+        .form-container{
+          background-color:white;
+          padding:20px;
+          border-radius:5px;
+          margin:auto
+      }
+            label{
+         display:block;
+         margin-bottom:8px;
+         font-weight:bottom;
+      }
+      input{
+         width:100%;
+         padding:8px;
+         margin-bottom:10px;
+         border:1px solid #ccc;
+         border-radius:4px;
+      }
+      button{
+         background-color:green;
+         border:none;
+         color:white;
+         padding:15px 32px;
+         text-align:center;
+         font-size:16px;
+         text-decoration:none;
+         border-radius:4px;
+      }
+       </style>
 </head>
+
 <body>
   <form method='post' action='UpdateTicketServlet'>
     <div class='form-group'>
