--- a/src/main/webapp/UserTicketBooking.html
+++ b/src/main/webapp/UserTicketBooking.html
@@ -7,7 +7,7 @@
         body {
             background-image: url('images/loginHill.jpg');
             background-color: #f0f0f0;
-            font-size:16px;
+            font-size:16px;	
             margin:0;
             padding:20px;
             min-height:100vh;
@@ -16,8 +16,8 @@
             justify-content:center;
         }
         h2{
-           font-family:'Arial';x
-           font-size:50px;
+           font-family:'Arial';
+           font-size:50 px;
            font-weight:bold;
            margin:20 px 0;
         }
